# zrip

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  DEVELOPMENT.md  LICENSE  README.md  SAFETY.md  SECURITY.md  release-plz.toml
.cargo/: config.toml
.github/workflows/: jsr.yml  release-plz.yml  rust.yml
bench/: Cargo.toml
bench/examples/: bench_streaming_dict.rs  ruzstd_compare.rs  zrip_bench.rs
bench/wasm/: Cargo.toml
bench/wasm/src/: main.rs
benches/: binggan_bench.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: error.rs  hash.rs  hint.rs  lib.rs  sequence.rs
crates/core/src/bitstream/: mod.rs  primitives.rs  reader.rs  reader_reverse.rs  writer.rs
crates/core/src/block/: mod.rs
crates/core/src/dict/: fastcover.rs  finalize.rs  mod.rs
crates/core/src/frame/: header.rs  mod.rs
crates/core/src/fse/: decode.rs  encode.rs  mod.rs  table_builder.rs  unchecked.rs
crates/core/src/huffman/: decode.rs  decode_4stream.rs  encode.rs  mod.rs  primitives.rs  weights.rs
crates/core/src/simd/: copy.rs  mod.rs  scalar.rs
crates/core/src/simd/wasm32/: simd128.rs
crates/core/src/simd/x86_64/: avx2.rs  bmi2.rs  mod.rs  sse2.rs
crates/core/src/xxhash/: mod.rs  primitives.rs
crates/decode/: Cargo.toml  README.md
crates/decode/src/: context.rs  exec.rs  fast_vec.rs  lib.rs  literals.rs  primitives.rs  safe_exec.rs  seq_table.rs  sequences.rs  streaming.rs
crates/decode/src/simd_decode/: mod.rs
crates/decode/src/simd_decode/aarch64/: decode.rs
crates/decode/src/simd_decode/wasm32/: decode.rs  mod.rs
crates/decode/src/simd_decode/x86_64/: decode.rs
crates/encode/: Cargo.toml  README.md
crates/encode/src/: block_encoder.rs  context.rs  dfast.rs  fast.rs  ldm.rs  lib.rs  literals.rs  output.rs  primitives.rs  sequences.rs  strategy.rs  streaming.rs  unchecked.rs
examples/: decode_compare.rs  mem_profile.rs  profile_czstd.rs  profile_czstd_decode.rs  profile_decode.rs  profile_decode_corpus.rs  profile_encode.rs  profile_openzl_decode.rs  profile_xray.rs  quickstart.rs  ruzstd_compare.rs  zrip_bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: c_compress_zrip_decompress.rs  corrupt_bitflip.rs  corrupt_decompress.rs  corrupt_dict.rs  corrupt_overwrite.rs  corrupt_splice.rs  corrupt_streaming.rs  corrupt_streaming_dict.rs  corrupt_truncate.rs  corrupt_zrip_output.rs  roundtrip_block.rs  roundtrip_dict.rs  roundtrip_frame.rs  roundtrip_streaming.rs  roundtrip_streaming_dict.rs  zrip_compress_c_decompress.rs
jsr/: README.md  build.sh  deno.json
jsr/src/: bench.ts  cross_test.ts  mod.ts  mod_test.ts
jsr/wasm/: Cargo.toml
jsr/wasm/.cargo/: config.toml
jsr/wasm/src/: lib.rs
scripts/: generate_small_corpus.sh  miri_unsafe_primitives.sh  overnight_memory_audit.sh  plot_bench.py  plot_dict.py  plot_matrix.py  plot_pipeline.py  plot_scatter.py  plot_small.py  plot_small_decode.py  plot_summary.py  profiles.py
src/: hash.rs  lib.rs  xxhash.rs
src/bitstream/: mod.rs  reader.rs  reader_reverse.rs  unchecked.rs  writer.rs
src/block/: mod.rs
src/decode/: context.rs  exec.rs  literals.rs  mod.rs  sequences.rs  streaming.rs  unchecked.rs
src/dict/: finalize.rs
src/encode/: block_encoder.rs  context.rs  dfast.rs  fast.rs  mod.rs  sequences.rs  strategy.rs  streaming.rs
src/frame/: header.rs  mod.rs
src/fse/: encode.rs  mod.rs
src/huffman/: decode.rs  encode.rs  mod.rs  unchecked.rs
src/simd/: mod.rs
src/simd/aarch64/: decode.rs  mod.rs  neon.rs
src/simd/x86_64/: avx2.rs  decode.rs  mod.rs  sse2.rs
tests/: a_miri_ub.rs  adversarial.rs  compress_into_alloc.rs  dict.rs  interop.rs  proptest_tests.rs  roundtrip.rs  spec_conformance.rs  streaming.rs  tests.proptest-regressions  tests.rs
