[workspace]
members = ["crates/core", "crates/encode", "crates/decode"]
exclude = ["fuzz", "bench"]

[package]
name = "zrip"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "Pure Rust zstd codec: Fast/DFast strategies (levels -7..4), COVER/FastCOVER dict builder"
license = "MIT"
repository = "https://github.com/paddor/zrip"
categories = ["compression"]
keywords = ["zstd", "zstandard", "compression", "decompression"]

[features]
default = ["std", "frame"]
std = ["alloc", "zrip-core/std", "zrip-encode/std", "zrip-decode/std"]
alloc = ["zrip-core/alloc", "zrip-encode/alloc", "zrip-decode/alloc"]
frame = ["std", "zrip-encode/frame", "zrip-decode/frame"]
dict_builder = ["std", "zrip-core/dict_builder"]
nightly = ["zrip-core/nightly", "zrip-encode/nightly", "zrip-decode/nightly"]

[dependencies]
zrip-core = { version = "0.3.0", path = "crates/core", default-features = false }
zrip-encode = { version = "0.3.0", path = "crates/encode", default-features = false }
zrip-decode = { version = "0.3.0", path = "crates/decode", default-features = false }

[dev-dependencies]
zstd = "0.13"
zstd-safe = "7"
proptest = "1"
libc = "0.2"

[[example]]
name = "quickstart"

[profile.release]
lto = "thin"
codegen-units = 1
