[package]
name = "zrip-core"
version = "0.1.4"
edition = "2024"
rust-version = "1.85"
description = "Shared types and codecs for zrip (internal crate)"
license = "MIT"
repository = "https://github.com/paddor/zrip"

[features]
default = ["std"]
std = ["alloc"]
alloc = []
dict_builder = ["std"]
nightly = []
