[package]
name = "zrip-core"
version = "0.9.1"
edition = "2024"
rust-version = "1.89"
description = "Shared types and codecs for zrip (internal crate)"
license = "MIT"
repository = "https://github.com/paddor/zrip"
readme = "README.md"

[lints]
workspace = true

[features]
default = ["std"]
std = ["alloc"]
alloc = []
dict_builder = ["std"]
nightly = []
paranoid = []
