[package]
name = "zrip-decode"
version = "0.3.1"
edition = "2024"
rust-version = "1.85"
description = "zstd decoder for zrip (internal crate)"
license = "MIT"
repository = "https://github.com/paddor/zrip"

[features]
default = ["std"]
std = ["alloc", "zrip-core/std"]
alloc = ["zrip-core/alloc"]
frame = ["std"]
nightly = ["zrip-core/nightly"]

[dependencies]
zrip-core = { version = "0.3.1", path = "../core", default-features = false }
