[package]
name = "zrip-decode"
version = "0.7.1"
edition = "2024"
rust-version = "1.88"
description = "zstd decoder for zrip (internal crate)"
license = "MIT"
repository = "https://github.com/paddor/zrip"
readme = "README.md"

[lints]
workspace = true

[features]
default = ["std", "simd"]
std = ["alloc", "zrip-core/std"]
alloc = ["zrip-core/alloc"]
simd = ["dep:fearless_simd"]
frame = ["std"]
nightly = ["zrip-core/nightly"]
paranoid = ["zrip-core/paranoid"]

[dependencies]
zrip-core = { version = "0.7.1", path = "../core", default-features = false }
fearless_simd = { version = "0.5", optional = true }

[dev-dependencies]
zrip = { path = "../.." }
