[package]
name = "zrip-encode"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "zstd encoder for zrip (internal crate)"
license = "MIT"
repository = "https://github.com/paddor/zrip"

[features]
default = ["std"]
std = ["zrip-core/std"]
alloc = ["zrip-core/alloc"]
frame = ["std"]
nightly = ["zrip-core/nightly"]

[dependencies]
zrip-core = { version = "0.2.0", path = "../core", default-features = false }
