[package]
name = "zrip-wasm"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
zrip = { path = "../..", default-features = false, features = ["std"] }
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
